--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pillow = "^10.3.0"
 ipython = "^8.24.0"
 redis = "^5.0.4"
 python-dotenv = "^1.0.1"
+django-apscheduler = "^0.6.2"
 
 [build-system]
 requires = ["poetry-core"]
