--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ ipython = "^8.24.0"
 redis = "^5.0.4"
 python-dotenv = "^1.0.1"
 django-apscheduler = "^0.6.2"
+black = "^24.4.2"
 
 [build-system]
 requires = ["poetry-core"]
