Работа с переменными окружения. Правки.

--- a/.env_example
+++ b/.env_example
@@ -1,16 +1,17 @@
-SECRET_KEY = django-insecure-__5^uli=v42z@rcap_x!u5%k-qtzznqorh@7m@1oq_g28@ppm5
 
-DEBUG = True
+SECRET_KEY =
 
-NAME = db_course_6
-USER = postgres
-PASSWORD = paragWay_38
+DEBUG =
 
-LOCATION = redis://localhost:6379
+NAME =
+USER =
+PASSWORD =
 
-EMAIL_HOST = smtp.yandex.ru
-EMAIL_PORT = 465
-EMAIL_USE_TLS = False
-EMAIL_USE_SSL = True
-EMAIL_HOST_USER = d0n.alehandro@yandex.ru
-EMAIL_HOST_PASSWORD = zyodemjyqvtsfcdi
+LOCATION =
+
+EMAIL_HOST =
+EMAIL_PORT =
+EMAIL_USE_TLS =
+EMAIL_USE_SSL =
+EMAIL_HOST_USER =
+EMAIL_HOST_PASSWORD =
